[tool.poetry]
name = "repl_python3_MogusBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tinydb = "^4.5.2"
discord = "^1.7.3"
Flask = "^2.0.2"
buttons = "^0.1.9"
replit = "^3.2.4"
discord-components = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
